--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "fluent-json-schema": "^4.2.1"
+    "fluent-json-schema": "^4.2.1",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
