--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "fluent-json-schema": "^4.2.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "6.5",
-    "mongoose": "^8.3.1"
+    "mongoose": "^8.3.1",
+    "openai": "^4.38.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
